namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-book-a-video-link-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-book-a-video-link-preprod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "book-a-video-link"
    cloud-platform.justice.gov.uk/slack-alert-channel: "book-a-video-link-alerts"
    cloud-platform.justice.gov.uk/application: "Book a video link"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-book-a-video-link-ui.git,https://github.com/ministryofjustice/hmpps-book-a-video-link-api.git,https://github.com/ministryofjustice/hmpps-video-conference-schedule-ui.git"
    cloud-platform.justice.gov.uk/team-name: "hmpps-book-a-video-link"
